// ── 数据源配置 ──
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

// ── 用户表 ──
model User {
  id            Int      @id @default(autoincrement()) @map("id")
  name          String   @map("name")
  email         String?  @map("email")
  phone         String?  @map("phone")
  department_id Int?     @map("department_id")
  status        String   @default("active") @map("status")
  password_hash String   @map("password_hash")
  created_at    DateTime @default(now()) @map("created_at")
  updated_at    DateTime @updatedAt @map("updated_at")

  department         Department?       @relation(fields: [department_id], references: [id])
  user_roles         UserRole[]
  owned_devices      Device[]          @relation("DeviceOwner")
  current_devices    Device[]          @relation("DeviceCurrentUser")
  owned_phones       PhoneNumber[]     @relation("PhoneOwner")
  owned_accounts     InternetAccount[] @relation("AccountOwner")
  current_accounts   InternetAccount[] @relation("AccountCurrentUser")
  created_devices    Device[]          @relation("DeviceCreator")
  updated_devices    Device[]          @relation("DeviceUpdater")
  created_accounts   InternetAccount[] @relation("AccountCreator")
  updated_accounts   InternetAccount[] @relation("AccountUpdater")
  operation_logs     OperationLog[]    @relation("Operator")
  managed_department Department[]      @relation("DepartmentManager")

  @@map("users")
}

// ── 部门表 ──
model Department {
  id              Int      @id @default(autoincrement()) @map("id")
  name            String   @map("name")
  manager_user_id Int?     @map("manager_user_id")
  created_at      DateTime @default(now()) @map("created_at")
  updated_at      DateTime @updatedAt @map("updated_at")

  manager  User?             @relation("DepartmentManager", fields: [manager_user_id], references: [id])
  users    User[]
  devices  Device[]
  accounts InternetAccount[]

  @@map("departments")
}

// ── 角色表 ──
model Role {
  id   Int    @id @default(autoincrement()) @map("id")
  code String @unique @map("code")
  name String @map("name")

  user_roles UserRole[]

  @@map("roles")
}

// ── 用户角色关联表 ──
model UserRole {
  id      Int @id @default(autoincrement()) @map("id")
  user_id Int @map("user_id")
  role_id Int @map("role_id")

  user User @relation(fields: [user_id], references: [id])
  role Role @relation(fields: [role_id], references: [id])

  @@unique([user_id, role_id])
  @@map("user_roles")
}

// ── 设备表 ──
model Device {
  id              Int       @id @default(autoincrement()) @map("id")
  device_code     String    @unique @map("device_code")
  device_name     String    @map("device_name")
  brand_model     String    @map("brand_model")
  imei            String    @unique @map("imei")
  sim_type        String    @map("sim_type")
  owner_subject   String    @map("owner_subject")
  department_id   Int?      @map("department_id")
  owner_user_id   Int?      @map("owner_user_id")
  current_user_id Int?      @map("current_user_id")
  status          String    @default("启用中") @map("status")
  risk_level      String    @default("none") @map("risk_level")
  remark          String?   @map("remark")
  created_by      Int?      @map("created_by")
  updated_by      Int?      @map("updated_by")
  created_at      DateTime  @default(now()) @map("created_at")
  updated_at      DateTime  @updatedAt @map("updated_at")
  deleted_at      DateTime? @map("deleted_at")

  department      Department?   @relation(fields: [department_id], references: [id])
  owner           User?         @relation("DeviceOwner", fields: [owner_user_id], references: [id])
  current_user    User?         @relation("DeviceCurrentUser", fields: [current_user_id], references: [id])
  created_by_user User?         @relation("DeviceCreator", fields: [created_by], references: [id])
  updated_by_user User?         @relation("DeviceUpdater", fields: [updated_by], references: [id])
  phone_numbers   PhoneNumber[]

  @@map("devices")
}

// ── 手机号表 ──
model PhoneNumber {
  id            Int      @id @default(autoincrement()) @map("id")
  device_id     Int      @map("device_id")
  slot_type     String   @map("slot_type")
  phone_number  String   @unique @map("phone_number")
  carrier       String   @map("carrier")
  is_primary    Boolean  @default(false) @map("is_primary")
  monthly_fee   Float    @default(0) @map("monthly_fee")
  plan_type     String?  @map("plan_type")
  owner_user_id Int?     @map("owner_user_id")
  status        String   @default("启用中") @map("status")
  remark        String?  @map("remark")
  created_at    DateTime @default(now()) @map("created_at")
  updated_at    DateTime @updatedAt @map("updated_at")

  device            Device            @relation(fields: [device_id], references: [id])
  owner             User?             @relation("PhoneOwner", fields: [owner_user_id], references: [id])
  internet_accounts InternetAccount[]

  @@map("phone_numbers")
}

// ── 互联网账号表 ──
model InternetAccount {
  id                Int       @id @default(autoincrement()) @map("id")
  phone_number_id   Int       @map("phone_number_id")
  account_code      String    @unique @map("account_code")
  platform          String    @map("platform")
  account_name      String    @map("account_name")
  login_account     String    @map("login_account")
  bind_phone        String?   @map("bind_phone")
  bind_email        String?   @map("bind_email")
  owner_subject     String    @map("owner_subject")
  purpose           String?   @map("purpose")
  service_provider  String?   @map("service_provider")
  monthly_fee       Float     @default(0) @map("monthly_fee")
  expire_at         DateTime? @map("expire_at")
  department_id     Int?      @map("department_id")
  owner_user_id     Int?      @map("owner_user_id")
  current_user_id   Int?      @map("current_user_id")
  permission_status String    @default("已授权") @map("permission_status")
  status            String    @default("启用中") @map("status")
  risk_level        String    @default("none") @map("risk_level")
  remark            String?   @map("remark")
  created_by        Int?      @map("created_by")
  updated_by        Int?      @map("updated_by")
  created_at        DateTime  @default(now()) @map("created_at")
  updated_at        DateTime  @updatedAt @map("updated_at")

  phone_number    PhoneNumber           @relation(fields: [phone_number_id], references: [id])
  department      Department?           @relation(fields: [department_id], references: [id])
  owner           User?                 @relation("AccountOwner", fields: [owner_user_id], references: [id])
  current_user    User?                 @relation("AccountCurrentUser", fields: [current_user_id], references: [id])
  created_by_user User?                 @relation("AccountCreator", fields: [created_by], references: [id])
  updated_by_user User?                 @relation("AccountUpdater", fields: [updated_by], references: [id])
  sensitive_info  AccountSensitiveInfo?

  @@map("internet_accounts")
}

// ── 账号敏感信息表 ──
model AccountSensitiveInfo {
  id                       Int       @id @default(autoincrement()) @map("id")
  account_id               Int       @unique @map("account_id")
  login_password_encrypted String?   @map("login_password_encrypted")
  real_name_info_encrypted String?   @map("real_name_info_encrypted")
  backup_info_encrypted    String?   @map("backup_info_encrypted")
  password_updated_at      DateTime? @map("password_updated_at")
  created_at               DateTime  @default(now()) @map("created_at")
  updated_at               DateTime  @updatedAt @map("updated_at")

  account InternetAccount @relation(fields: [account_id], references: [id])

  @@map("account_sensitive_infos")
}

// ── 操作日志表 ──
model OperationLog {
  id          Int      @id @default(autoincrement()) @map("id")
  operator_id Int      @map("operator_id")
  action_type String   @map("action_type")
  target_type String   @map("target_type")
  target_id   Int?     @map("target_id")
  target_name String?  @map("target_name")
  before_data String?  @map("before_data")
  after_data  String?  @map("after_data")
  ip_address  String?  @map("ip_address")
  device_info String?  @map("device_info")
  remark      String?  @map("remark")
  created_at  DateTime @default(now()) @map("created_at")

  operator User @relation("Operator", fields: [operator_id], references: [id])

  @@map("operation_logs")
}

// ── 通用风险记录表 ──
model EntityRisk {
  id          Int       @id @default(autoincrement()) @map("id")
  entity_type String    @map("entity_type")
  entity_id   Int       @map("entity_id")
  risk_code   String    @map("risk_code")
  risk_title  String    @map("risk_title")
  risk_level  String    @map("risk_level")
  risk_reason String    @map("risk_reason")
  suggestion  String?   @map("suggestion")
  status      String    @default("open") @map("status")
  detected_at DateTime  @default(now()) @map("detected_at")
  resolved_at DateTime? @map("resolved_at")

  @@map("entity_risks")
}
